index.css
body 
{
    font-family: sans-serif;
    height: 100dvh;
    max-height: 100dvh;
    display: flex;
    align-items: center;
    justify-content: center;
    overflow: hidden;
}

.logo
{
    height: 96px;
    display: flex;
    justify-content: center;
    align-items: flex-end;
}

.mascot
{
    width: 96px;
}

.search
{
    margin-top: 16px;
    border-radius: 16px;
    border: 1px solid #aaa;
    padding: 8px 16px;
    width: 400px;
    outline: none;
}

.search.active 
{
    border-bottom: none;
    border-radius: 0;
    border-top-left-radius: 16px;
    border-top-right-radius: 16px;
}

.gray 
{
    color: #aaa;
    font-size: 24px;
}

.title
{
    margin: 0;
    margin-left: 12px;
    font-size: 40px;
    color: #222;
}

.footer
{
    max-width: 90vw;
    color: gray;
    position: absolute;
    bottom: 16px;
    text-align: center;
    z-index: -2;
}

div > ul.tree
{
    width: 400px;
    max-height: 45vh;
    overflow: scroll;
}

div > ul.tree::-webkit-scrollbar 
{
    display: none;
}

div > ul.tree
{
    -ms-overflow-style: none; 
    scrollbar-width: none; 
} 

.results 
{
    position: absolute;
    z-index: 1000;
    width: 432px;
    display: flex;
    flex-direction: column;
    border: 1px solid #aaa;
}

.results.inactive 
{
    display: none;
}

.results > a 
{
    font-size: 0.8rem;
    background-color: #fff;
    color: rgb(26, 81, 246);
    width: 400px;
    padding: 5px 16px;
    text-decoration: none;
}

.results > a:nth-child(2n)
{
    background-color: #eee;
}

.results > a:not(:last-child)
{
    border-bottom: 1px solid #ccc;
}

.results > a > span 
{
    color: black;
}

